fix layout issues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -210,9 +210,8 @@ p {
 /* CART */
 
 .cart-panel {
-  bottom: 55px;
-  z-index: 2;
-  width: "100%";
+  bottom: 0;
+  padding-bottom: 55px;
 }
 
 /* PRODUCT PAGE */
